# trackball

./: CMakeLists.txt  LICENSE  README.md  qml.qrc
.github/workflows/: build-macos.yml  build-ubuntu-linux.yml  build-windows.yml
src/: TodoListItem.h  TodoListModel.cpp  TodoListModel.h  main.cpp
src/qml/: AboutWindow.qml  TodoList.qml  TodoListItem.qml  aboutwindow.qml  main.qml
